Add Trms statistics

--- a/cookbooks/kinematically_driven_subduction_2d/CMakeLists.txt
+++ b/cookbooks/kinematically_driven_subduction_2d/CMakeLists.txt
@@ -33,11 +33,11 @@ FIND_PACKAGE(Aspect 2.4.0 QUIET HINTS ${Aspect_DIR} ../ ../../ $ENV{ASPECT_DIR})
 
 IF (NOT Aspect_FOUND)
   MESSAGE(FATAL_ERROR "\n"
-	"Could not find a valid ASPECT build/installation directory. "
-	"Please specify the directory where you are building ASPECT by passing\n"
-	"   -D Aspect_DIR=<path to ASPECT>\n"
-	"to cmake or by setting the environment variable ASPECT_DIR in your shell "
-	"before calling cmake. See the section 'How to write a plugin' in the "
+  "Could not find a valid ASPECT build/installation directory. "
+  "Please specify the directory where you are building ASPECT by passing\n"
+  "   -D Aspect_DIR=<path to ASPECT>\n"
+  "to cmake or by setting the environment variable ASPECT_DIR in your shell "
+  "before calling cmake. See the section 'How to write a plugin' in the "
         "manual for more information.")
 ENDIF ()
 
@@ -46,5 +46,5 @@ DEAL_II_INITIALIZE_CACHED_VARIABLES()
 SET(TARGET "subduction_plate_cooling")
 PROJECT(${TARGET})
 
-ADD_LIBRARY(${TARGET} SHARED subduction_plate_cooling.cc )
+ADD_LIBRARY(${TARGET} SHARED subduction_plate_cooling.cc composition_trms_statistics.cc)
 ASPECT_SETUP_PLUGIN(${TARGET})
